syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/audit";

import "google/protobuf/timestamp.proto";

message Audit {
    google.protobuf.Timestamp created_at = 1;

    google.protobuf.Timestamp updated_at = 2;
    
    int64 vers = 3;
}