syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/contactcommunicationmethod";

import "audit.proto";
import "contactcommunicationmethodfield.proto";

message ContactCommunicationMethod {
    string contact_system_code = 1;

    int64 contact_id = 2;

    int64 contact_communication_method_id = 3;

    string communication_method_code = 4;

    string communication_method_label_code = 5;

    string communication_method_label_caption = 6;

    string format_value = 7;

    bool is_default = 8;

    repeated v1.ContactCommunicationMethodField contact_communication_method_field = 9;

    v1.Audit audit = 10;
}

message DoReadContactCommunicationMethodRequest {
    string contact_system_code = 1;

    int64 contact_id = 2;

    int64 contact_communication_method_id = 3;
}

message DoReadContactCommunicationMethodResponse {
    ContactCommunicationMethod contact_communication_method = 1;
}

message DoReadAllContactCommunicationMethodRequest { 
    string contact_system_code = 1;

    int64 contact_id = 2;
}

message DoReadAllContactCommunicationMethodResponse {
    repeated ContactCommunicationMethod contact_communication_method = 1;
}

message DoSaveContactCommunicationMethodRequest { 
    ContactCommunicationMethod contact_communication_method = 1;
}

message DoSaveContactCommunicationMethodResponse {
    bool result = 1;
}

message DoDeleteContactCommunicationMethodRequest {
    string contact_system_code = 1;

    int64 contact_id = 2;

    int64 contact_communication_method_id = 3;
}

message DoDeleteContactCommunicationMethodResponse {
    bool result = 1;
}

service ContactCommunicationMethodService { 
    rpc DoRead (DoReadContactCommunicationMethodRequest) returns (DoReadContactCommunicationMethodResponse);

    rpc DoReadAll (DoReadAllContactCommunicationMethodRequest) returns (DoReadAllContactCommunicationMethodResponse);

    rpc DoSave (DoSaveContactCommunicationMethodRequest) returns (DoSaveContactCommunicationMethodResponse);

    rpc DoDelete (DoDeleteContactCommunicationMethodRequest) returns (DoDeleteContactCommunicationMethodResponse);
}